feat: Compose Spark demo on Spark 4.1.2 with working policy enforcement
Add a `spark` Compose profile that mirrors the DataFusion demo: a Spark 4.1
(Scala 2.13, Java 17) runtime that builds the policast-spark plugin jar with
sbt and runs the RunSpark governance demo. Unlike the DataFusion path there is
no sidecar — the plugin enforces the compiled manifest directly via Catalyst
optimizer rules.

Compose / build:
- docker/Dockerfile: spark-build (sbt assembly) + spark-demo (Spark 4.1 runtime)
  stages; route sbt boot + plugin + deps through MAVEN_PROXY_URL when set so the
  launcher resolves behind a Maven firewall.
- docker-compose.yml `spark-demo` service, Justfile `spark-build`/`spark-demo`,
  docker/entrypoint-spark.sh, and .env.example knobs.

Spark 3.5.4 -> 4.1.2:
- build.sbt sparkVersion 4.1.2, Scala 2.13.16.
- Java 17 base images, Scala-2.13-only -bin-hadoop3 distro.
- PolicastOptimizerRule: match LogicalRelation's new 5-arg shape.

Enforcement fixes (the plugin loaded policies but did not enforce them):
- Load the manifest from spark.policast.manifest.path in the rules; the driver
  plugin wrote it to a clone of SparkConf, so the rules always saw None.
- RunSpark registers `patients` as a catalog table — a file-backed temp view
  carries no catalog identifier, so table-scoped policies never matched.
- Column masking wraps the relation and remaps references to the masked
  attribute everywhere above it (including show()'s pretty-print projection),
  fixing masks that leaked the raw value through exprId aliasing.
- CelEvaluator builds string literals via Literal.create (Spark 4 rejects raw
  Java strings in the 2-arg Literal constructor).
- Tag relations so the fixed-point optimizer does not re-wrap them.

Tests:
- PolicastEnforcementSpec: SparkSession integration coverage for every role,
  plus masking-remap and idempotency regression guards.
- build.sbt: fork the test JVM with the Java 17 module-opens Spark needs.

sbt test: 29/29 pass. `just spark-demo` enf